# customized-chatbot

./: .env  README.md  docker-compose.yml  pyproject.toml
extractor-service/: Dockerfile
extractor-service/app/: main.py  requirements.txt
extractor-service/app/api/: routes.py
extractor-service/app/application/services/: extractor_service.py
extractor-service/app/domain/interfaces/: cleaner.py  intent_detector.py
extractor-service/app/infrastructure/cleaner/: query_cleaner.py
extractor-service/app/infrastructure/data/: intent_dictionary.json  query_cleaner_vocab.json
extractor-service/app/infrastructure/detectors/: rule_based_detector.py
llm-service/app/: requirements.txt
llm-service/app/api/: routes.py
llm-service/app/application/services/: llm_service.py
llm-service/app/domain/interfaces/: llm_client.py  parser.py  prompt.py  validator.py
llm-service/app/infrastructure/clients/: groq_llm.py
llm-service/app/infrastructure/data/: intents.json
llm-service/app/infrastructure/parser/: response_parser.py
llm-service/app/infrastructure/prompt/: prompt_builder.py
llm-service/app/infrastructure/validator/: output_validator.py
models/plant_disease/: main.py  requirements.txt
models/plant_disease/src/config/: config.yaml
orchestrator/app/: main.py  requirements.txt
orchestrator/app/api/: routes.py
tool-service/: Dockerfile
tool-service/app/: main.py  requirements.txt
tool-service/app/api/: routes.py
user-interface-service/: Dockerfile
user-interface-service/app/: main.py  requirements.txt
(+15 files in other folders)
