[project]
name = "customized-chatbot"
version = "0.1.0"
description = "Custom AI Chatbot with Microservices & Deep Learning Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "fastmcp>=3.2.0",
    "groq>=1.1.2",
    "kagglehub>=1.0.0",
    "keras>=3.13.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.3",
    "numpy>=2.4.3",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "tensorflow>=2.21.0",
    "turboquant>=0.2.0",
    "uvicorn>=0.42.0",
]
